# 175_sokoban

./: .gitignore  README.md  pyproject.toml  requirements.txt
report/: REPORT.md
sokoban/: __init__.py  cli.py
sokoban/bench/: __init__.py  harness.py
sokoban/data/: __init__.py  boxoban.py  xsokoban.py
sokoban/data/levels/: __init__.py  xsokoban_curated.xsb
sokoban/env/: __init__.py  board.py  moves.py  parser.py
sokoban/rl/: __init__.py  env_wrapper.py  evaluate.py  policy.py  train.py
sokoban/solvers/: __init__.py  astar.py  base.py  bfs.py  deadlock.py  heuristics.py  hybrid.py  idastar.py  macros.py  ppo.py  transposition.py
sokoban/viz/: __init__.py  animate.py  render.py
tests/: test_astar.py  test_bfs_smoke.py  test_curated_levels.py  test_deadlock.py  test_heuristics.py  test_moves.py  test_parser.py  test_rl_stack.py
