[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sokoban175"
version = "0.1.0"
description = "CS175 Sokoban solver project: environment, visualizer, benchmarking, and datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Vedant Khatri" },
  { name = "Lakshya Malik" },
  { name = "Jakob Groh" },
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
# Heavyweight stack for the RL / hybrid solver. Kept optional so the
# core environment and classical-search solvers work without PyTorch
# installed (~1.5 GB extra otherwise).
rl = [
  "torch>=2.1",
  "stable-baselines3>=2.2",
  "gymnasium>=0.29",
]

[project.scripts]
sokoban = "sokoban.cli:main"

[tool.setuptools.packages.find]
include = ["sokoban*"]

[tool.setuptools.package-data]
sokoban = ["data/levels/*.xsb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
